2014-11-07  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 1.8.32.0-rc2 Released.

2014-11-06 09:05 +0000 [r427380]  Corey Farrell <git@cfware.com>

	* Fix unintential memory retention in stringfields.

	  * Fix missing / unreachable calls to
	    __ast_string_field_release_active.
	  * Reset pool->used to zero when the current pool->active reaches
	    zero.

	ASTERISK-24307 #close
	Reported by: Etienne Lessard
	Tested by: ibercom, Etienne Lessard
	Review: https://reviewboard.asterisk.org/r/4114/

2014-11-03  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 1.8.32.0-rc1 Released.

2014-11-02 08:01 +0000 [r427023]  Corey Farrell <git@cfware.com>

	* main/app.c: Fix ast_writestream leaks Fix cleanup in
	  __ast_play_and_record where others[x] may be leaked. This was
	  caught where prepend != NULL && outmsg != NULL, once realfile[x]
	  == NULL any further others[x] would be leaked. A cleanup block
	  was also added for prepend != NULL && outmsg == NULL. 11+: Fix
	  leak of ast_writestream recording_fs in
	  app_voicemail:leave_voicemail. ASTERISK-24476 #close Reported by:
	  Corey Farrell Review: https://reviewboard.asterisk.org/r/4138/

2014-10-31 16:37 +0000 [r426926-426929]  Tzafrir Cohen <tzafrir.cohen@xorcom.com>

	* Makefile: Fix syntax from r426926

	* Makefile: install init.d files on GNU/kFreeBSD Review:
	  https://reviewboard.asterisk.org/r/4118/

2014-10-31 03:24 +0000 [r426858]  Matthew Jordan <mjordan@digium.com>

	* channels/sip/reqresp_parser.c,
	  channels/sip/include/reqresp_parser.h:
	  channels/sip/reqresp_parser: Fix unit tests for r426594 When
	  r426594 was made, it did not take into account a unit test that
	  verified that the function properly populated the unsupported
	  buffer. The function would previously memset the buffer if it
	  detected it had any contents; since this function can now be
	  called iteratively on successive headers, the unit tests would