@@ -1,1 +1,1 @@
-1.8.32.0-rc2
+1.8.32.0
